post spacing fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,2 +1,6 @@
+div[data-orientation="horizontal"], div[data-orientation="horizontal"]:hover {
+  background-color: transparent;
+}
+
 
 
